tests/errors/AssignUninitializedArrayElement.imp
VAR
  a b[42]
BEGIN
  a := b[7];
END
